updated templates, parser DB switched to Jelly2 support updated minor version number

--- a/testtools/src/org/netbeans/modules/testtools/templates/jellyTest.html
+++ b/testtools/src/org/netbeans/modules/testtools/templates/jellyTest.html
@@ -12,6 +12,6 @@ Microsystems, Inc. All Rights Reserved.
 -->
 
 <HTML><BODY>
-<h3>NbJUnit Testsuite Template with Jelly and Jemmy support</h3>
-Testsuite can be used independently on XTest framework.
+<h3>Testsuite Template with embedded Jelly and Jemmy support</h3>
+Redirects Jemmy logs, performs conditional screen captures in case of failure or error and inserts waiting between test cases.
 </BODY></HTML>
