--- a/testtools/src/org/netbeans/modules/testtools/wizards/TestTypeSettingsPanel.form
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/TestTypeSettingsPanel.form
@@ -5,9 +5,9 @@
     <Component class="javax.swing.ButtonGroup" name="buttonGroup">
     </Component>
   </NonVisualComponents>
-  <SyntheticProperties>
-    <SyntheticProperty name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,18,0,0,1,-112"/>
-  </SyntheticProperties>
+  <AuxValues>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,18,0,0,1,-112"/>
+  </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
   <SubComponents>
@@ -34,8 +34,8 @@
         </Component>
         <Component class="javax.swing.JLabel" name="systemLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Windows System: "/>
             <Property name="displayedMnemonic" type="int" value="87"/>
+            <Property name="text" type="java.lang.String" value="Windows System: "/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -88,8 +88,8 @@
     </Container>
     <Component class="javax.swing.JLabel" name="stopLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Test Type with this name already exists or has invalid name."/>
         <Property name="horizontalAlignment" type="int" value="0"/>
+        <Property name="text" type="java.lang.String" value="Test Type with this name already exists or has invalid name."/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
